Fix search box size on iPhone

--- a/app/assets/stylesheets/mobile.css.less
+++ b/app/assets/stylesheets/mobile.css.less
@@ -17,6 +17,6 @@
     visibility:hidden;
   }
   #search input {
-    width:59px;
+    width:50px;
   }
 }
